<resources>
    <string name="app_name">Smart Home</string>
    <string name="name">Name</string>
    <string name="device_name">Device name</string>
    <string name="device_name_example">Hall fan</string>
    <string name="pin_number">Pin number</string>
    <string name="pin_number_example">1234</string>
    <string name="or">or</string>
    <string name="select_any_one_device">Select any one device</string>
    <string name="status_enabled">Status: Enabled</string>
    <string name="status_disabled">Status: Disabled</string>
    <string name="turn_off">Turn off</string>
    <string name="turn_on">Turn on</string>
    <!--    <string name="profile">Profile &#128125;</string>-->
    <string name="profile">Profile &#129302;</string>
    <string name="humidity">Humidity</string>
    <string name="temperature">Temperature</string>
    <string name="fan">Fan</string>
    <string name="bulb">Bulb</string>
    <string name="made_by">Made by NNPP</string>
    <string name="about_app">About app</string>
    <string name="zero">0</string>
    <string name="log_out">Log out</string>
    <string name="devices">Devices</string>
    <string name="total">Total</string>
    <string name="active">Active</string>
    <string name="tv">TV</string>
    <string name="fridge">Fridge</string>
    <string name="waving_hand_emoji">&#128075;</string>
    <string name="add_a_device">Add a device</string>
    <string name="add_a_device_emoji">Add a device &#128161;</string>
    <string name="hello_user">Hello user &#128075;</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="disable_device">Disable device</string>
    <string name="enable_device">Enable device</string>
    <string name="email">Email</string>
    <string name="email_ex">name@email.com</string>
    <string name="email_example">john@email.com</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_number_example">6969696420</string>
    <string name="password">Password</string>
    <string name="password_example">************</string>
    <string name="retype_password">Retype Password</string>
    <string name="name_example">John Appleseed</string>
    <string name="add_device">Add device</string>
</resources>