<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fontFamily="@font/montserrat"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:letterSpacing="0.02"
        android:padding="10dp"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="38sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:src="@drawable/sign_in_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/sign_in_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/montserrat"
        android:hint="@string/email_example"
        android:inputType="textEmailAddress"
        android:padding="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/sign_in_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/montserrat"
        android:hint="@string/password_example"
        android:inputType="textPassword"
        android:padding="12dp" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/montserrat"
        android:onClick="onSignInClick"
        android:padding="12dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/montserrat"
        android:text="@string/or"
        android:textColor="@color/black"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat"
        android:onClick="onCreateAccountClick"
        android:text="@string/create_an_account"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>
