<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".SignUpActivity">



        <LinearLayout
            android:id="@+id/sign_up_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:letterSpacing="0.02"
                android:padding="10dp"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                android:textSize="38sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/sign_up_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="14dp"
                android:background="@drawable/edit_text_border"
                android:fontFamily="@font/montserrat"
                android:hint="@string/name_example"
                android:padding="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="14dp"
                android:background="@drawable/edit_text_border"
                android:fontFamily="@font/montserrat"
                android:hint="@string/email_example"
                android:inputType="textEmailAddress"
                android:padding="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/sign_up_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="14dp"
                android:background="@drawable/edit_text_border"
                android:fontFamily="@font/montserrat"
                android:hint="@string/phone_number_example"
                android:inputType="phone"
                android:padding="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="14dp"
                android:background="@drawable/edit_text_border"
                android:fontFamily="@font/montserrat"
                android:hint="@string/password_example"
                android:inputType="textPassword"
                android:padding="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/retype_password"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/sign_up_retype_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="14dp"
                android:background="@drawable/edit_text_border"
                android:fontFamily="@font/montserrat"
                android:hint="@string/password_example"
                android:inputType="textPassword"
                android:padding="12dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />


            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="4dp"
                android:backgroundTint="@color/red"
                android:fontFamily="@font/montserrat"
                android:onClick="onSignUpClick"
                android:padding="12dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>





</ScrollView>



