<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DeviceDetailActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/device_detail_icon_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/device_detail_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="40dp" />

            <TextView
                android:id="@+id/device_detail_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/montserrat"
                android:text="Status: running"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_profile_button"
            android:elevation="4dp"
            android:gravity="center_horizontal"
            android:onClick="onCloseClick"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_clear" />

        </LinearLayout>
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/device_name"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/device_detail_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/montserrat"
        android:hint="@string/device_name_example"
        android:padding="14dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/pin_number"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/device_detail_pin_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/montserrat"
        android:hint="@string/pin_number_example"
        android:padding="14dp"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/device_detail_toggle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/montserrat"
            android:padding="12dp"
            android:text="@string/disable_device"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/device_detail_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/red"
            android:elevation="4dp"
            android:fontFamily="@font/montserrat"
            android:padding="20dp"
            android:src="@drawable/ic_delete"
            android:textAllCaps="false"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>